tests/ui/wf/wf-convert-dyn-incompat-trait-obj-box.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-convert-dyn-incompat-trait-obj-box.rs:16:33
   |
LL |     let t_box: Box<dyn Trait> = Box::new(S);
   |                                 ^^^^^^^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-convert-dyn-incompat-trait-obj-box.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: only type `S` implements `Trait`; consider using it directly instead.
   = note: required for the cast from `Box<S>` to `Box<dyn Trait>`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-convert-dyn-incompat-trait-obj-box.rs:17:15
   |
LL |     takes_box(Box::new(S));
   |               ^^^^^^^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-convert-dyn-incompat-trait-obj-box.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: only type `S` implements `Trait`; consider using it directly instead.
   = note: required for the cast from `Box<S>` to `Box<(dyn Trait + 'static)>`

error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/wf-convert-dyn-incompat-trait-obj-box.rs:15:5
   |
LL |     Box::new(S) as Box<dyn Trait>;
   |     ^^^^^^^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/wf-convert-dyn-incompat-trait-obj-box.rs:6:14
   |
LL | trait Trait: Sized {}
   |       -----  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = help: only type `S` implements `Trait`; consider using it directly instead.
   = note: required for the cast from `Box<S>` to `Box<dyn Trait>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0038`.
